--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Delete.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Delete.cshtml
@@ -1,23 +1,10 @@
 ﻿@model Squirrel.Domain.ViewModels.FileDeleteModel
 
-<h4>حذف فایل</h4>
-
-@Html.Partial("_Message")
-
-@using (Ajax.BeginForm("Delete", "Files", null, new AjaxOptions { UpdateTargetId = "option_con_2" }, new { id = "file_details_form" }))
+@using (Ajax.BeginForm("Delete", "Files", null,
+    new AjaxOptions { OnFailure = "onDeleteFileError", OnSuccess = "onDeleteFileSuccess" },
+    new { id = "delete_file_form" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
     @Html.HiddenFor(m => m.FullFilePath)
-
-    <p>
-        <button type="submit" class="btn btn-default">حذف</button>
-        <button type="button" class="btn btn-default" onclick="$('#option_con_2').html('');">انصراف</button>
-    </p>
 }
-
-<script type="text/javascript">
-    $(function () {
-        $.validator.unobtrusive.parse("#file_details_form");
-    })
-</script>
