--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Edit.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Edit.cshtml
@@ -1,48 +1,52 @@
 ﻿@using Squirrel.Utility.Helpers
 @model Squirrel.Domain.ViewModels.FileEditModel
 
-@Html.Partial("_Message")
+<div class="topic-row">
+    ویرایش فایل
+</div>
 
-@using (Ajax.BeginForm("Edit", "Files", null, new AjaxOptions { UpdateTargetId = "option_con_2" }, new { id = "file_details_form" }))
+@using (Ajax.BeginForm("Edit", "Files", null,
+    new AjaxOptions { OnFailure = "onEditFileError", OnSuccess = "onEditFileSuccess" },
+    new { id = "edit_file_form" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
 
-    <p class="form-group">
+    <div class="divider-blank15"></div>
+    <div class="form-row">
         @Html.LabelFor(m => m.Name)
-        <br />
-        @Html.TextBoxFor(m => m.Name)
-        @Html.ValidationMessageFor(m => m.Name)
-    </p>
-
-    <p class="form-group">
+        @Html.TextBoxFor(m => m.Name, new { @class = "textbox small" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.Name)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div class="form-row">
         @Html.LabelFor(m => m.Category)
-        <br />
-        @Html.TextBoxFor(m => m.Category, new { id = "category_edit" })
-        @Html.ValidationMessageFor(m => m.Category)
-    </p>
-
-    <p class="form-group">
+        @Html.TextBoxFor(m => m.Category, new { @class = "textbox small", id = "category_edit" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.Category)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div class="form-row">
         @Html.LabelFor(m => m.IsPublic)
-        <br />
-        @Html.DropDownListFor(m => m.IsPublic, SelectListExtensions.SelectListOfBool("عمومی", "اختصاصی"))
-        @Html.ValidationMessageFor(m => m.IsPublic)
-    </p>
-
-    <p>
-        <button type="submit" class="btn btn-default">ویرایش</button>
-        <button type="button" class="btn btn-default" onclick="$('#option_con_2').html('');">انصراف</button>
-    </p>
+        @Html.DropDownListFor(m => m.IsPublic, SelectListExtensions.SelectListOfBool("عمومی", "اختصاصی"), new { @class = "select small" })
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.IsPublic)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div>
+        <button type="submit" class="button small submit">ویرایش</button>
+        <a class="button small" onclick="restoreSecondryContent()">انصراف</a>
+    </div>
 }
 
 <script type="text/javascript">
     $(function () {
-        $.validator.unobtrusive.parse("#file_details_form");
-        $("#file_details_form").data("validator").settings.ignore = "";
-
-        $('#FileAddress').bind('change', function () {
-            $(this).valid();
-        });
+        $.validator.unobtrusive.parse("#edit_file_form");
+        $("#edit_file_form").data("validator").settings.ignore = "";
 
         $("#category_edit").autocomplete({
             source: function (request, response) {
