--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Replace.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Replace.cshtml
@@ -1,32 +1,38 @@
 ﻿@model Squirrel.Domain.ViewModels.FileReplaceModel
 
-@Html.Partial("_Message")
-
+<div class="topic-row">
+    جایگزینی فایل
+</div>
+<div class="divider-blank15"></div>
 <div id="upload_file_con">
     @Html.Partial("Upload")
 </div>
 
 
-@using (Ajax.BeginForm("Replace", "Files", null, new AjaxOptions { UpdateTargetId = "option_con_2" }, new { id = "file_details_form" }))
+@using (Ajax.BeginForm("Replace", "Files", null,
+    new AjaxOptions { OnFailure = "onReplaceFileError", OnSuccess = "onReplaceFileSuccess" },
+    new { id = "replace_file_form" }))
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(m => m.Id)
     @Html.HiddenFor(m => m.FileAddress)
 
-    <p class="form-group">
-        @Html.ValidationMessageFor(m => m.FileAddress)
-    </p>
-
-    <p>
-        <button type="submit" class="btn btn-default">جایگذینی</button>
-        <button type="button" class="btn btn-default" onclick="$('#option_con_2').html('');">انصراف</button>
-    </p>
+    <div class="form-row">
+        <div class="validation">
+            @Html.ValidationMessageFor(m => m.FileAddress)
+        </div>
+    </div>
+    <div class="divider-blank15"></div>
+    <div>
+        <button type="submit" class="button small submit">ثبت</button>
+        <a class="button small" onclick="restoreSecondryContent()">انصراف</a>
+    </div>
 }
 
 <script type="text/javascript">
     $(function () {
-        $.validator.unobtrusive.parse("#file_details_form");
-        $("#file_details_form").data("validator").settings.ignore = "";
+        $.validator.unobtrusive.parse("#replace_file_form");
+        $("#replace_file_form").data("validator").settings.ignore = "";
 
         $('#FileAddress').bind('change', function () {
             $(this).valid();
