--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Profile/Avatar.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Profile/Avatar.cshtml
@@ -1,93 +1,16 @@
-﻿@using Squirrel.Domain.Enititis
-@model Squirrel.Domain.ViewModels.ProfileAvatarModel
+﻿@model Squirrel.Domain.ViewModels.ProfileAvatarModel
 
-<div id="profile_avatar_con"></div>
-
-@using (Ajax.BeginForm("Avatar", "Profile", null, new AjaxOptions { OnSuccess = "onChangeAvatarSuccess" }, new { id = "profile_details_form" }))
+@using (Ajax.BeginForm("Avatar", "Profile", null,
+    new AjaxOptions { OnFailure = "onAvatarProfileError", OnSuccess = "onAvatarProfileSuccess" },
+    new { id = "profile_avatar_form" }))
 {
     @Html.AntiForgeryToken()
-    @Html.HiddenFor(m => m.AvatarId, new { id = "profile_avatar_id" })
-    @Html.ValidationMessageFor(m => m.AvatarId)
+    @Html.HiddenFor(m => m.AvatarId)
 }
-
-<div id="profile_avatar_error" style="color: orangered;"></div>
-
-@{
-    const string targetKey = "HeaderImage";
-}
-@Html.Hidden(string.Format("{0}_id", targetKey))
-<div id="change_post_image_con">
-    <div class="change-post-image">
-        <div>عکس مورد نظر خود را انتخاب کنید.</div>
-        <div id="change_post_image"></div>
-        <button type="button" class="btn btn-success" onclick="confirmImagesPopup()">ثبت</button>
-        <button type="button" class="btn btn-warning" onclick="closeImagesPopup()">بستن</button>
-    </div>
-</div>
 
 <script type="text/javascript">
     $(function () {
-        $(document).on('@string.Format("on{0}Choice", targetKey)', headerImageChoiceHandler);
-        $(document).on('@string.Format("on{0}Pager", targetKey)', headerImagePagerHandler);
-        loadImagesPopup();
-    });
-
-    function loadImagesPopup() {
-        $.ajax({
-            url: '@Url.Action("Popup", "Files")',
-            data: {
-                Page: 1,
-                TargetKey: '@targetKey',
-                Type: '@FileType.Image',
-                IsFixedType: true,
-            },
-            type: "POST",
-            success: function (r) {
-                $('#change_post_image').html(r);
-                $('#change_post_image_con').css('display', 'flex');
-            }
-        });
-    }
-
-    function headerImageChoiceHandler(e) {
-        $('@string.Format("#{0}_id", targetKey)').val(e.id);
-    }
-
-    function headerImagePagerHandler(e) {
-        $('#change_post_image').html(e.content);
-    }
-
-    function closeImagesPopup() {
-        $('@string.Format("#{0}_id", targetKey)').val('');
-        $('#change_post_image_con').css('display', 'none');
-    }
-
-    function confirmImagesPopup() {
-        $('#profile_avatar_id').val($('@string.Format("#{0}_id", targetKey)').val());
-        closeImagesPopup();
-        $('#profile_details_form').submit();
-    }
+        $.validator.unobtrusive.parse("#profile_avatar_form");
+        $("#profile_avatar_form").data("validator").settings.ignore = "";
+    })
 </script>
-
-<style type="text/css">
-    #change_post_image_con {
-        position: fixed;
-        z-index: 10000;
-        background-color: #000000;
-        background-color: rgba(0,0,0,.8);
-        top: 0;
-        bottom: 0;
-        right: 0;
-        left: 0;
-        /*display: flex;*/
-        display: none;
-        align-items: center;
-        justify-content: center;
-    }
-
-        #change_post_image_con .change-post-image {
-            background-color: #fff;
-            width: 80%;
-            padding: 20px 30px;
-        }
-</style>
